--- a/src/main/resources/templates/User/join.html
+++ b/src/main/resources/templates/User/join.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h2>Join</h2>
-<form action="/joinRequest" method="post">
-    <label>아이디 : <input type="text" name="user_id"/></label><br>
+<form action="/joinRequest" method="post"><!--action="/checkUserId" method="post">-->
+    <label>아이디 : <input type="text" name="user_id"/></label> <a href="/checkUserId">중복확인</a><br>
     <label>비밀번호 : <input type="password" name="user_pw"/></label><br>
     <label>이름 : <input type="text" name="user_nm"/></label>
     <input type="submit" value="가입"/>
