--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
         </th:block>
         <th:block th:if="${session.loginUser!=null}">
             <li><a href="/profile">프로필</a></li>
+            <li><a href="/userInfo">회원정보</a></li>
             <li><a href="/logout">로그아웃</a></li>
         </th:block>
     </ul>
