Implement temporary UserSearch

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,11 @@
             <li><a href="/userInfo">회원정보</a></li>
             <li><a href="/logout">로그아웃</a></li>
         </th:block>
+
+        <form action="/userSearch">
+            <input type="text" name="userSearch">
+            <button>유저검색</button>
+        </form>
     </ul>
 </body>
 </html>
