Implement to connect spring-boot with react
- build react-create-app

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <ul>
-        <p>
-            <strong th:if="${session.loginUser!=null}" th:text="${session.loginUser.getUserNm()}"/>
-            <span th:if="${session.loginUser==null}">고객</span>님 환영합니다!
-        </p>
-        <th:block th:if="${session.loginUser==null}">
-            <li><a href="/joinPage">회원가입</a><br></li>
-            <li><a href="/loginPage">로그인</a><br></li>
-        </th:block>
-        <th:block th:if="${session.loginUser!=null}">
-            <li><a href="/profile">프로필</a></li>
-            <li><a href="/userInfo">회원정보</a></li>
-            <li><a href="/logout">로그아웃</a></li>
-        </th:block>
-
-        <form action="/userSearch">
-            <input type="text" name="userSearch">
-            <button>유저검색</button>
-        </form>
-    </ul>
-</body>
-</html>
+<!doctype html><html lang="ko"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link href="https://fonts.googleapis.com/css?family=Gothic+A1&display=swap" rel="stylesheet"><title>Document</title><link href="//localhost:8888/static/css/main.c084321f.chunk.css" rel="stylesheet"></head><body><div id="root"></div><script>!function(a){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],l=0,f=[];l<n.length;l++)t=n[l],Object.prototype.hasOwnProperty.call(p,t)&&p[t]&&f.push(p[t][0]),p[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(a[r]=o[r]);for(s&&s(e);f.length;)f.shift()();return c.push.apply(c,u||[]),i()}function i(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==p[u]&&(n=!1)}n&&(c.splice(r--,1),e=l(l.s=t[0]))}return e}var t={},p={1:0},c=[];function l(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return a[e].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=a,l.c=t,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(r,e){if(1&e&&(r=l(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)l.d(t,n,function(e){return r[e]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="//localhost:8888/";var r=this.webpackJsonpfrontend=this.webpackJsonpfrontend||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;i()}([])</script><script src="//localhost:8888/static/js/2.4686abd6.chunk.js"></script><script src="//localhost:8888/static/js/main.e7ca494e.chunk.js"></script></body></html>
