[frontend] 로컬파일 marge
수경 , 성호 프론트엔드 작업 로컬파일 marge

--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -35,18 +35,19 @@ header{
     margin-left: 10px;
     width: 40px;
     height: 40px;
-    background-color: gold;
+    cursor:pointer;
 }
 
 #header-right .search-user{
-    margin-right: 100px;
+    margin-right: 160px;
     background-color: transparent;
-    padding-top: 3px;
+    padding-top: 5px;
 }
 
-#header-right .search-user>input{
+.search-user>input{
     font-size: 23px;
-    width: 140px;
+    width: 200px;
+    border-radius: 10px;
 }
 
 .menu-wrap{
