--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -3,6 +3,12 @@
     flex-direction: column;
 }
 
+#main-wrap{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
 main{
     display: flex;
     flex-direction: column;
@@ -13,41 +19,21 @@ main{
 }
 
 main #timeline-list{
-    flex: 1;
-    /* background-color: white; */
-    border: 1px solid lightgray;
     padding-top: 50px;
     margin-bottom: 60px;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-/* 타임라인 사진만 */
 
-.timeline-1{
-    display: flex;
+/* 타임라인 일정+사진 */
+.timeline{
+    flex-direction: column;
+    margin-bottom: 50px;
     width: 100%;
-    height: 400px;
-    /* background-color: yellow; */
-    border: 1px solid lightgray;
-    border : 1px solid black;
-}
-
-.timeline-picture{
-    /* background-color: honeydew; */
-    border: 1px solid lightgray;
-    flex: 6;
-}
-
-.timeline-picture>img{
-    width: 480px;
-    height: 400px;
-    object-fit: cover;
-}
-
-.timeline-info{
-    flex: 4;
-    background-color: white;
+    height: 550px;
+    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+    border-radius: 20px 20px; 
 }
 
 .timeline-profile{
@@ -56,11 +42,9 @@ main #timeline-list{
     align-items: center;
     width: 100%;
     height: 60px;
-    /* background-color: white; */
-    border: 1px solid lightgray;
 }
 
-.timeline-profile .profile-picture{
+.profile-picture{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -68,106 +52,221 @@ main #timeline-list{
     width: 60px;
     height: 60px;
     padding: 5px;
+    border-radius: 20px; 
     border: 1px solid lightgray;
+
     /* z-index: 2; */
 }
 
-.timeline-profile .profile-picture>img{
+.profile-picture>img{
     width: 50px;
     height: 50px;
+    border-radius: 20px; 
     object-fit: cover;
 }
 
-.timeline-profile .profile-name{
+.profile-name{
     position: absolute;
     left: 0px;
     padding-left: 70px;
     display: flex;
     justify-content: left;
     align-items: center;
-    width: 100%;
-    
+    width: 300px;
     height: 60px;
-    /* background-color: salmon */
     border: 1px solid lightgray;
 }
 
-.timeline-comment{
-    height: 340px;
-    /* background-color: skyblue; */
-    border: 1px solid lightgray;
-}
-
-.timeline-comment .status-message{
-    height: 50px;
-    /* background-color: azure; */
-    border: 1px solid lightgray;
+.profile-time{
+    position: absolute;
+    right:0px;
     display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 60px;
+    border: 1px solid lightgray;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 30px;}
+
+.profile-moreIcon{
+    position: absolute;
+    right: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height:60px;
+    cursor: pointer;
+}
+
+.timeline-info{
+    display: flex;
+    height: 490px;
+}
+
+
+.timeline-picture-info{
+    display: flex;
+    height: 440px;
+    flex-direction: column;
+    border: 1px solid lightgray;
+    border-radius: 20px 20px;
+}
+
+
+.timeline-picture, .timeline-picture>img{
+    width: 500px;
+    height: 340px;
+}
+
+.timeline-picture>img{
+    object-fit: cover;
+    padding:10px;
+}
+
+.timeline-title{
+    height: 50px;
+    border: 1px solid lightgray;
+}
+
+.timeline-context{
+    height: 100px;
+    border: 1px solid lightgray;
+}
+
+.comment-context{
+    height: 490px;    
+}
+
+.comment-title{
+    display:flex;
+    align-items: center;
+    padding-left: 10px;
+    height: 50px;
+    width: 356px;
+    /*넓이 애매함..*/
+    border: 1px solid lightgray;
+} 
+
+.comment-reply{
+    display:flex;
+    flex-direction: column;
+    height: 290px;
+    border: 1px solid lightgray;
+    padding: 10px;
+}
+.comment-icon{
+    display:flex;
+    justify-content: space-between;
+    padding-left: 5px;
+    padding-right:5px;
+}
+
+.comment-icon-left, .comment-icon-right{
+    display: flex;
+    align-items: center;
+    height: 50px;
+}
+
+.likeIcon, .followIcon, .shareIcon{
+    margin: 5px;
+    cursor: pointer;
+}
+
+
+.comment-write{
+    height: 100px;
+    border: 1px solid lightgray;
+}
+
+/* 일정만 => Week일때 */
+
+.timeline-schedule{
+    flex-direction: column;
+    margin-bottom: 50px;
+    width: 100%;
+    height: 400px;
+    border-radius: 20px; 
+    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+}
+.timeline-schedule-shared{
+    display: flex;
+    flex-direction: column;
+}
+.timeline-schedule-title{
+    height: 40px;
+    border: 1px solid lightgray;
+    display:flex;
     align-items: center;
     padding-left: 10px;
 }
 
-.timeline-comment .comment-list{
+
+.timeline-schedule-info{
+    height: 190px;
+    flex-direction: column;
+    border: 1px solid lightgray;
+}
+
+table{
+    width: 98%;
+    margin: 10px;
+    border-radius: 10px; 
+    box-shadow: 0px 1px 3px rgb(161, 159, 159);
+}
+th, td{
+    border: 1px solid lightgray;
+}
+td{
+    height: 90px;
+    text-align: center;
+}
+/* aside 프로필 */
+@media (max-width: 1400px) {
+   aside{
+       display: none;
+   }
+
+} 
+aside{ 
+    position: fixed;
+    right: 30px;
+    margin-top: 100px;
+
+}
+
+aside>.aside-profile{
+    height: 430px;
+    width: 270px;
+    border-radius: 20px 20px; 
+    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+    padding-left: 30px;
+    padding-top: 30px;
+}
+
+.aside-profile .timeline-profile{
     height: 200px;
-    /* background-color: tan; */
+    width: 200px;    
     border: 1px solid lightgray;
 }
+.aside-profile .timeline-profile>img{
+    border-radius: 50%; 
+    overflow: hidden;
 
-.timeline-comment .comment-buttons{
-    height: 40px;
-    /* background-color: snow; */
-    border: 1px solid lightgray;
+}
+.aside-profile-info{
+    margin-top: 10px;
 }
 
-.timeline-comment .comment-input{
-    height: 50px;
-    /* background-color: coral; */
-    border: 1px solid lightgray;
+.aside-profile-name, .aside-profile-statusMsg{
+    text-align: center;
+    width:200px;
+    height: 30px;
+    border : 1px solid lightgray;
 }
-
-/* 타임라인 사진만---- */
-/* 타임라인 일정만 */
-.timeline-2{
-    display: flex;
-    margin-top: 20px;
-    height: 300px;
-    /* background-color: cornsilk; */
-    border: 1px solid black;
-}
-
-.timeline-2 .timeline-info .timeline-comment{
-    height: 240px;
-}
-
-.timeline-2 .timeline-info .timeline-comment>.comment-list{
-    height: 150px;
-}
-.timeline2-schedual{
-    flex: 6;
-    height: 100%;
-    width: 480px;
-    /* background-color: cornflowerblue; */
-    border: 1px solid lightgray;
-}
-
-
-/* 타임라인 일정만 */
-
-.timeline-3{
-    margin-top: 20px;
-    display: flex;
-    width: 100%;
-    height: 400px;
-    /* background-color: yellow; */
-    border : 1px solid black;
-}
-
-.timeline3-schedual{
-    height: 120px;
-    /* background-color: rosybrown; */
-    border: 1px solid lightgray;
-}
-
-.timeline3-comment-list{
-    height: 130px;
+.aside-profile-TodaySchedule{
+    width:200px;
+    height: 100px;
+    border : 1px solid lightgray;
 }
