프로필 디자인
- 일정부분 레이아웃
- 게시물 추가 버튼 클릭시 메뉴 3개(일정+사진, 일정, 일정공유)
- 일정 + 사진, 일정부분 디자인

--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -22,7 +22,6 @@ header{
     margin-right: 10px;
     width: 40px;
     height: 40px;
-    background-color: gold;
 }
 
 #header-right{
@@ -31,24 +30,14 @@ header{
     margin-right: 10px;
 }
 
-#header-right>div{
+#header-right .profile-icon{
     margin-left: 10px;
     width: 40px;
     height: 40px;
     cursor:pointer;
 }
 
-#header-right .search-user{
-    margin-right: 160px;
-    background-color: transparent;
-    padding-top: 5px;
-}
 
-.search-user>input{
-    font-size: 23px;
-    width: 200px;
-    border-radius: 10px;
-}
 
 .menu-wrap{
     display: flex;
