--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -136,7 +136,7 @@ main #timeline-list{
 }
 
 .comment-context{
-    height: 490px;    
+    height: 490px;
 }
 
 .comment-title{
@@ -144,7 +144,7 @@ main #timeline-list{
     align-items: center;
     padding-left: 10px;
     height: 50px;
-    width: 356px;
+    width: 360px;
     /*넓이 애매함..*/
     border: 1px solid lightgray;
 } 
@@ -156,12 +156,13 @@ main #timeline-list{
     border: 1px solid lightgray;
     padding: 10px;
 }
-.comment-icon{
+.comment-context-icon{
     display:flex;
     justify-content: space-between;
     padding-left: 5px;
-    padding-right:5px;
+    padding-right: 5px;
 }
+
 
 .comment-icon-left, .comment-icon-right{
     display: flex;
@@ -169,7 +170,7 @@ main #timeline-list{
     height: 50px;
 }
 
-.likeIcon, .followIcon, .shareIcon{
+.likeIcon, .followIcon, .commentIcon, .shareIcon{
     margin: 5px;
     cursor: pointer;
 }
@@ -194,7 +195,7 @@ main #timeline-list{
     display: flex;
     flex-direction: column;
 }
-.timeline-schedule-title{
+.timeline-schedule-title, .timeline-schedule-date{
     height: 40px;
     border: 1px solid lightgray;
     display:flex;
