--- a/frontend/src/Components/Login/LoginPage.css
+++ b/frontend/src/Components/Login/LoginPage.css
@@ -9,8 +9,9 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background: no-repeat fixed linear-gradient(-225deg, RGB(255, 223, 75, 0.5), RGB(0, 168, 255, 0.5));
-    /* background-color: rgba(83, 92, 104, 0.1); */
+    /* background: no-repeat fixed linear-gradient(-225deg, RGB(255, 223, 75, 0.5), RGB(0, 168, 255, 0.5)); */
+    /* background-color: rgba(64,115,159,0.9); */
+    background-color: rgba(20, 81, 51, 0.8);
 }
 
 .icon{
