--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -32,8 +32,10 @@ main #timeline-list{
     margin-bottom: 50px;
     width: 100%;
     height: 550px;
-    box-shadow: 0px 1px 5px rgb(161, 159, 159);
-    border-radius: 20px 20px; 
+    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
+    border-radius: 10px;
+    border: 2px solid rgba(20, 81, 51, 0.3);
+
 }
 
 .timeline-profile{
@@ -52,7 +54,7 @@ main #timeline-list{
     width: 60px;
     height: 60px;
     padding: 5px;
-    border-radius: 20px; 
+    border-radius: 10px;
     border: 1px solid lightgray;
 
     /* z-index: 2; */
@@ -111,7 +113,7 @@ main #timeline-list{
     height: 440px;
     flex-direction: column;
     border: 1px solid lightgray;
-    border-radius: 20px 20px;
+    border-radius: 10px;
 }
 
 
@@ -188,8 +190,9 @@ main #timeline-list{
     margin-bottom: 50px;
     width: 100%;
     height: 400px;
-    border-radius: 20px; 
-    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+    border-radius: 10px;
+    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
+    border: 2px solid rgba(20, 81, 51, 0.3);
 }
 .timeline-schedule-shared{
     display: flex;
@@ -225,31 +228,31 @@ td{
 }
 /* aside 프로필 */
 @media (max-width: 1400px) {
-   aside{
-       display: none;
-   }
+    aside{
+        display: none;
+    }
 
 } 
 aside{ 
     position: fixed;
     right: 30px;
     margin-top: 100px;
-
 }
 
 aside>.aside-profile{
-    height: 430px;
-    width: 270px;
-    border-radius: 20px 20px; 
-    box-shadow: 0px 1px 5px rgb(161, 159, 159);
-    padding-left: 30px;
-    padding-top: 30px;
+    height: 390px;
+    width: 220px;
+    border-radius: 10px;
+    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
+    padding-left: 10px;
+    padding-top: 10px;
+    border: 2px solid rgba(20, 81, 51, 0.3);
 }
 
 .aside-profile .timeline-profile{
     height: 200px;
     width: 200px;    
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
 }
 .aside-profile .timeline-profile>img{
     border-radius: 50%; 
@@ -264,10 +267,10 @@ aside>.aside-profile{
     text-align: center;
     width:200px;
     height: 30px;
-    border : 1px solid lightgray;
+    /* border : 1px solid lightgray; */
 }
 .aside-profile-TodaySchedule{
     width:200px;
     height: 100px;
-    border : 1px solid lightgray;
+    /* border : 1px solid lightgray; */
 }
