--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -12,13 +12,30 @@
     padding-right: 20px;
 }
 
+/* 아이콘 색깔 css */
+.MuiSvgIcon-root{
+    color: rgba(20, 81, 51, 0.9);
+}
+
+.makeStyles-inputInput-158{
+    color: rgba(20, 81, 51, 0.9) !important;
+}
+
+#main-profile>.search-user>.makeStyles-search-155{
+    border: 2px solid rgba(20, 81, 51, 0.3);
+    border-radius: 10px;
+}
+
+
 #main-profile-info{
     display: flex;
     height: 500px;
     margin-left: 20px;
     margin-right: 20px;
-    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
     border-radius: 20px; 
+    border: 2px solid rgba(20, 81, 51, 0.3);
+
 }
 
 #userinfo{
@@ -103,8 +120,10 @@ nav>div{
     margin-left: 20px;
     margin-right: 20px;
     padding: 10px 20px;
-    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
     border-radius: 10px; 
+    border: 2px solid rgba(20, 81, 51, 0.3);
+
 }
 
 /* ScheduleTimeline부분 */
@@ -117,33 +136,59 @@ nav>div{
     margin-top:30px;
 }
 
-
 article{
     display: flex;
 }
 
 .timeline-profile-schedule{
-    margin:10px;
     width: 420px;
     height: 290px;
-    border-radius: 20px; 
-    box-shadow: 0px 1px 5px rgb(161, 159, 159);
+    border-radius: 10px;
+    margin: 10px;
+    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
+    border: 2px solid rgba(20, 81, 51, 0.3);
+}
+
+.timeline-profile-time{
+    display: flex;
+    justify-content: space-between;
+}
+
+.timeline-profile-top{
+    display: flex;
+    align-items: center;
+}
+
+.timeline-profile-picture>img{
+    height: 40px;
+    border-radius: 20px;
+    margin-left: 5px;
+    margin-top:3px;
+}
+.timeline-profile-name{
+    padding-left: 10px;
+}
+.timeline-schedule-date{
+    margin-right: 10px;
+    border: none;
 }
 
 .profile-schedule-info{
-    height: 180px;
     border: 1px solid lightgray;
 }
 
 .profile-schedule-info .timeline-schedule-weekTable{
-    height: 100px;
+    height: 150px;
 }
+
+
+
+
 
 .media-area .media-item{
     margin: 10px 20px;
     height: 230px;
     width: 230px;
-
 }
 
 .media-area .media-item>img{
