--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -25,13 +25,15 @@ main #timeline-list{
     padding-right: 20px;
 }
 
+.timeline-Margin{
+    margin-bottom: 50px;
+}
 
 /* 타임라인 일정+사진 */
 .timeline{
     flex-direction: column;
-    margin-bottom: 50px;
     width: 100%;
-    height: 550px;
+    height: 100%;
     /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
     border-radius: 10px;
     border: 2px solid rgba(20, 81, 51, 0.3);
@@ -187,7 +189,6 @@ main #timeline-list{
 
 .timeline-schedule{
     flex-direction: column;
-    margin-bottom: 50px;
     width: 100%;
     height: 400px;
     border-radius: 10px;
@@ -235,7 +236,7 @@ td{
 } 
 aside{ 
     position: fixed;
-    right: 30px;
+    right: 50px;
     margin-top: 100px;
 }
 
