[Frontend] Add ImageEditor, ProfileEditor
-ProfileEditor 에 속한 react-image-crop 사용 부분을 함수형 컴포넌트로 ImageEditor.js로 분할
-GruopAdd.css > gruop.css 로 이름변경 (그룹에 속한 모든 css를 정의할 목적)
-GroupAdd.js 코드 구체화 (첫 함수형 컴포넌트로 개발)

--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -97,10 +97,11 @@ header{
     border-top: 1px solid rgba(209, 204, 192,0.8);
 }
 
-.MuiButton-label>div{
-    display: flex;
-    align-content: center;
+.LongMenuOpen{
+    display: flex !important;
+    align-content: center !important;
 }
+
 
 .LongMenuOpen>div>.MuiButtonBase-root{
     padding: 5px;
