--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -190,7 +190,7 @@ main #timeline-list{
 .timeline-schedule{
     flex-direction: column;
     width: 100%;
-    height: 400px;
+    height: 100%;
     border-radius: 10px;
     /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
     border: 2px solid rgba(20, 81, 51, 0.3);
@@ -210,6 +210,8 @@ main #timeline-list{
 
 .timeline-schedule-info{
     height: 190px;
+    width: 860px;
+
     flex-direction: column;
     border: 1px solid lightgray;
 }
@@ -230,6 +232,9 @@ td{
 /* aside 프로필 */
 @media (max-width: 1400px) {
     aside{
+        display: none;
+    }
+    .timeline-plus-button{
         display: none;
     }
 
@@ -274,4 +279,14 @@ aside>.aside-profile{
     width:200px;
     height: 100px;
     /* border : 1px solid lightgray; */
+}
+
+
+.timeline-plus-button{
+    position: fixed;
+    bottom : 20px;
+    right: 50px;
+}
+.MuiFab-primary{
+    background-color: rgba(20, 81, 51, 0.9) !important;
 }
