--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -1,7 +1,7 @@
 #main-profile{
     display: flex;
     flex-direction: column;
-    height: 600px;
+    height: 580px;
     padding-top: 10px;
     width: 900px;
 }
@@ -14,7 +14,7 @@
 
 /* 아이콘 색깔 css */
 #main-profile>.search-user>.makeStyles-search-55>.makeStyles-searchIcon-56>.MuiSvgIcon-root{
-    color: rgba(20, 81, 51, 0.7);
+    color: rgba(20, 81, 51, 0.7) ;
 }
 
 #main-profile>.search-user>.makeStyles-search-55>.MuiInputBase-root>.makeStyles-inputInput-58{
@@ -74,9 +74,17 @@
     padding-bottom: 10px;
     text-align: center;
 }
-
-.follower, .follow{
-    padding-left: 30px;
+.followerName, .followName{
+    margin-right: 20px;
+}
+.followerNum, .followNum{
+    font-size: 20px;
+}
+li .MuiTypography-colorPrimary{
+    color: rgba(20, 81, 51, 0.9) !important;
+}
+link{
+    text-decoration: none;
 }
 
 .status-content{
@@ -92,21 +100,6 @@
     width: 70%;
 }
 
-#calender-area .search-schedule{
-    height: 50px;
-    position: relative;
-}
-
-#calender-area .search-schedule>input{
-    position: absolute;
-    right: 0;
-    top: 10px;
-    font-size: 15px;
-}
-
-#calender-area .calender{
-    height: 450px;
-}
 
 nav{
     display: flex;
@@ -115,13 +108,11 @@ nav{
 }
 
 nav>div{
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
     /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
-    border-radius: 10px; 
-    border: 2px solid rgba(20, 81, 51, 0.3);
-
 }
+
 
 /* ScheduleTimeline부분 */
 .profile-ScheduleTimeLine, .profile-MediaTimeline{
@@ -130,7 +121,7 @@ nav>div{
     width: 900px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-top:30px;
+    margin-top:10px;
 }
 
 article{
@@ -211,7 +202,9 @@ article{
 
 .calender{
     margin-top: 10px;
-    height: 430px;
+    margin-left: 3px;
+    height: 475px;
+    WIDTH: 600px;
     border: 1px solid lightgray;
     border-radius: 10px;
 }
