--- a/frontend/src/Components/Other/SearchField.css
+++ b/frontend/src/Components/Other/SearchField.css
@@ -4,12 +4,25 @@
 }
 .searchField-title{
     padding: 10px;
+    height: 50px;   
+    background-color:  rgba(20, 81, 51, 0.9);
 }
 .searchField-result-list{
     padding: 10px;
 }
+.group-follow_change{
+    display: flex;
+    flex-direction: column;
+}
 .follower_list{
     display: flex;
     justify-content: space-between;
-    width: 200px;
+    width: 320px;
+    margin-top: 10px;
+}
+.MuiTabs-flexContainer{
+    justify-content: center;
+}
+.MuiTab-textColorPrimary.Mui-selected {
+    color : rgba(20, 81, 51, 0.9) !important;
 }
