--- a/frontend/src/Components/Header/header.css
+++ b/frontend/src/Components/Header/header.css
@@ -97,9 +97,16 @@ header{
     border-top: 1px solid rgba(209, 204, 192,0.8);
 }
 
+.button-wrap{
+    position: relative;
+}
+
 .LongMenuOpen{
     display: flex !important;
     align-content: center !important;
+    position: absolute;
+    top: 0;
+    right: 10px;
 }
 
 
