--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
     box-shadow: 0px 1px 2px rgba(161, 159, 159, 0.8);
     background-color: white;
     padding: 5px;
@@ -36,6 +35,8 @@
     width: 50px;
     height: 50px;
     object-fit: cover;
+    border-radius: 50%;
+
 }
 
 .profile-name{
@@ -122,8 +123,9 @@
     align-items: center;
 }
 .comment-reply-users-img>img{
-    padding-bottom: 5px;
-    padding-top: 5px;
+    width:40px;
+    height:40px;
+    object-fit: cover;
     border-radius: 50%;
 }
 .comment-reply-users-name{
@@ -201,7 +203,6 @@ fieldset{
     flex-direction: column;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
     box-shadow: 0px 1px 2px rgba(161, 159, 159, 0.8);
     background-color: white;
     padding: 5px;
