--- a/frontend/src/Components/Main/mainPage.css
+++ b/frontend/src/Components/Main/mainPage.css
@@ -69,6 +69,8 @@ aside>.aside-profile{
     object-fit: cover ;
     height: 200px;
     width: 200px;   
+    box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
+
 }
 .aside-profile-info{
     margin-top: 10px;
