--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -13,17 +13,6 @@
     padding-right: 20px;
 }
 
-/* 아이콘 색깔 css */
-#main-profile>.search-user>.makeStyles-search-55>.makeStyles-searchIcon-56>.MuiSvgIcon-root{
-    color: rgba(20, 81, 51, 0.7) ;
-}
-
-#main-profile>.search-user>.makeStyles-search-55>.MuiInputBase-root>.makeStyles-inputInput-58{
-    color: rgba(20, 81, 51, 0.9) !important;
-    border: 2px solid rgba(20, 81, 51, 0.3) !important;
-    border-radius: 10px !important;
-}
-
 
 
 #main-profile-info{
@@ -31,10 +20,9 @@
     height: 500px;
     margin-left: 20px;
     margin-right: 20px;
-    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
-    border-radius: 20px; 
-    border: 2px solid rgba(20, 81, 51, 0.3);
-
+    box-shadow: 0px 1px 2px rgba(161, 159, 159, 0.8);
+    background-color: white;
+    padding: 5px;
 }
 
 #userinfo{
@@ -45,41 +33,42 @@
 }
 
 #user-image{
-    height: 220px;
+    padding-top:10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid lightgray;
-    border-radius: 10px;
     margin: 10px;
 }
 
 #user-image >img{
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
 }
 
 #userinfo #userinfo-text{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px;
     padding: 10px;
-    border: 1px solid lightgray;
-    border-radius: 10px; 
 }
 
 .info ul li{
-    font-size: 20px;
-    padding-bottom: 10px;
+    font-size: 18px;
+    padding-bottom: 5px;
     text-align: center;
 }
+.name{
+    font-weight: bold;
+}
 .followerName, .followName{
-    margin-right: 20px;
+    margin-right: 10px;
+    font-size: 16px;
 }
 .followerNum, .followNum{
-    font-size: 20px;
+    font-size: 17px;
 }
 li .MuiTypography-colorPrimary{
     color: rgba(20, 81, 51, 0.9) !important;
@@ -89,11 +78,16 @@ link{
 }
 
 .status-content{
-    height: 100px;
+    display: flex;
+    align-items: center;
     width: 200px;
+    height: 150px;
     margin-top: 10px;
-    padding: 2px 10px;
-    border: 1px solid lightgray;
+    padding: 10px;;
+    font-size: 15px;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+
 }
 
 #calender-area{
@@ -119,6 +113,7 @@ nav>div{
 .profile-ScheduleTimeLine, .profile-MediaTimeline{
     display:flex;
     flex-wrap: wrap;
+    align-self: center;
     width: 900px;
     margin-left: 10px;
     margin-right: 10px;
@@ -129,18 +124,20 @@ article{
     display: flex;
 }
 
+.media-area{
+    margin-left:5px;
+}
+
 .timeline-profile-schedule, .media-box{
     width: 420px;
     height: 290px;
-    border-radius: 10px;
     margin: 10px;
-    /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
-    border: 2px solid rgba(20, 81, 51, 0.3);
-    
+    background-color: white;
+
 }
 .timeline-profile-schedule:hover, .media-box:hover{
-    border: 2px solid rgba(20, 81, 51, 0.6);
-    background-color: rgba(20, 81, 51, 0.05);
+    box-shadow: 0px 1px 5px rgba(161, 159, 159, 0.9)
+
 }
 
 .timeline-profile-time{
@@ -155,22 +152,23 @@ article{
 
 .timeline-profile-picture>img{
     height: 40px;
-    border-radius: 20px;
     margin-left: 5px;
     margin-top:3px;
 }
 .timeline-profile-name{
     padding-left: 10px;
+    font-size: 15px;
 }
 .timeline-schedule-date{
     margin-right: 10px;
     border: none;
+    font-weight: 400;
+    font-size: 15px;
 }
-
-.profile-schedule-info{
-    border: 1px solid lightgray;
+.timeline-schedule-title{
+    font-weight: 400;
+    font-size: 15px;
 }
-
 .profile-schedule-info .timeline-schedule-weekTable{
     height: 150px;
 }
@@ -179,6 +177,12 @@ article{
     display:flex;
     align-content: center;
     justify-content: center;
+}
+.media-box>img{
+    width: 400px;
+    height: 290px;
+    object-fit: cover ;
+    /* background-color: black; */
 }
 
 
