--- a/frontend/src/Components/Timeline/Timeline.css
+++ b/frontend/src/Components/Timeline/Timeline.css
@@ -36,6 +36,7 @@
     height: 50px;
     object-fit: cover;
     border-radius: 50%;
+    box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
 
 }
 
@@ -100,6 +101,8 @@
     width: 490px;
     height: 330px;
     object-fit: cover;
+    box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
+
 }
 
 .timeline-title{
@@ -127,6 +130,8 @@
     height:40px;
     object-fit: cover;
     border-radius: 50%;
+    box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
+
 }
 .comment-reply-users-name{
     padding-left: 10px;
