--- a/frontend/src/Components/Profile/ProfilePage.css
+++ b/frontend/src/Components/Profile/ProfilePage.css
@@ -7,14 +7,46 @@
     align-self: center;
 }
 
-#main-profile .search-user{
+.postIt>ul>.postIt-1{
+    position: absolute;
+    top : 120px;
+    width: 20px;
+    height: 40px;
+    background-color: rgba(200,20,20,0.3);
+}
+.postIt>ul>.postIt-2{
+    position: absolute;
+    top: 170px;
+    width: 20px;
+    height: 40px;
+    background-color: rgba(150,100,30,0.3);
+}
+.postIt>ul>.postIt-3{
+    position: absolute;
+    top: 220px;
+    width: 20px;
+    height: 40px;
+    background-color: rgba(20, 81, 51, 0.3);
+}
+
+#main-profile .profile-search-schedule{
     align-self: flex-end;
     padding-bottom: 10px;
     padding-right: 20px;
 }
 
+.profile-search-schedule>div>div>div>input{
+    color: gray !important;
+}
 
+.profile-search-schedule>div>div>div>.MuiSvgIcon-root{
+    color: rgba(20, 81, 51, 0.5) !important;
+}
 
+.profile-search-schedule>div>div>.MuiInputBase-root{
+    border:1px solid rgba(20, 81, 51, 0.2) !important;
+    border-radius: 5px;
+}
 #main-profile-info{
     display: flex;
     height: 500px;
@@ -45,7 +77,6 @@
     height: 200px;
     object-fit: cover;
     border-radius: 50%;
-    box-shadow: 0px 1px 3px rgba(161, 159, 159, 0.8);
 }
 
 #userinfo #userinfo-text{
@@ -107,6 +138,7 @@ nav>div{
     padding-right: 5px;
     /* box-shadow: 0px 1px 5px rgb(161, 159, 159); */
 }
+
 
 
 /* ScheduleTimeline부분 */
