--- a/frontend/src/Components/Calendar/Calendar.css
+++ b/frontend/src/Components/Calendar/Calendar.css
@@ -1,94 +1,99 @@
 .calendar {
-    position: relative;
-    width: 595px;
-    height: 475px;
-    background-color: #fff;
+  position: relative;
+  width: 595px;
+  height: 475px;
+  background-color: #fff;
 }
 
 .calendar-header {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ddd;
 }
 
 .calendar-header-center {
-    width: 515px;
-    height: 75px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-weight: bold;
-    text-transform: uppercase;
+  width: 515px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .wrap-days {
-    display: flex;
-    height: 30px;
-    font-size: 10px;
-    text-transform: uppercase;
-    border-bottom: 1px solid #ddd;
+  display: flex;
+  height: 30px;
+  font-size: 10px;
+  text-transform: uppercase;
+  border-bottom: 1px solid #ddd;
 }
 .day {
-    display: flex;
-    padding-top: 3px;
-    justify-content: center;
-    align-items: center;
-    width: 85px;
-    color: #777;
+  display: flex;
+  padding-top: 3px;
+  justify-content: center;
+  align-items: center;
+  width: 85px;
+  color: #777;
 }
-.wrap-cells {
-    position: relative;
+#wrap-cells {
+  position: relative;
 }
 .cell-row {
-    display: flex;
-    height: 74px;
-    border-bottom: 1px solid #ddd;
+  display: flex;
+  height: 74px;
+  border-bottom: 1px solid #ddd;
 }
 .cell {
-    position: relative;
-    height: 74px;
-    width: 85px;
-    border-right: 1px solid #ddd;
-    overflow: hidden;
-    cursor: default;
+  position: relative;
+  height: 74px;
+  width: 85px;
+  border-right: 1px solid #ddd;
+  overflow: hidden;
+  cursor: default;
 }
 
 /* .cell:hover .bg{
     text-decoration: overline;
 } */
 .cell .number {
-    position: absolute;
-    top: 2px;
-    right: 4px;
-    font-size: 82.5%;
-    font-weight: 700;
-    user-select: none;
+  position: absolute;
+  top: 2px;
+  right: 4px;
+  font-size: 82.5%;
+  font-weight: 700;
+  user-select: none;
 }
 
 .cell .bg {
-    font-weight: 700;
-    line-height: 1;
-    color: blue;
-    opacity: 0;
-    font-size: 7em;
-    position: absolute;
-    top: 1px;
-    right: -2px;
-    transition: 0.25s ease-out;
-    letter-spacing: -0.07em;
-    user-select: none;
+  font-weight: 700;
+  line-height: 1;
+  color: blue;
+  opacity: 0;
+  font-size: 7em;
+  position: absolute;
+  top: 1px;
+  right: -2px;
+  transition: 0.25s ease-out;
+  letter-spacing: -0.07em;
+  user-select: none;
 }
 
 .cell:hover .bg {
-    opacity: 0.05;
-    transition: 0.5s ease-in;
+  opacity: 0.05;
+  transition: 0.5s ease-in;
 }
 
 .cell-row .disabled {
-    color: #ddd;
+  color: #ddd;
 }
 .cell-row .selected {
-    border-left: 10px solid transparent;
-    border-image: linear-gradient(45deg, #43745c 0%, #8bb4a0 40%);
-    border-image-slice: 1;
+  border-left: 10px solid transparent;
+  border-image: linear-gradient(45deg, #43745c 0%, #8bb4a0 40%);
+  border-image-slice: 1;
+}
+
+.wrap-sc {
+  position: absolute;
+  top: 106px;
 }
